# htan2-data-model

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  HTAN.jsonld  HTAN2Model.yaml  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  config.public.mk  config.yaml  demographics_manifest.csv  demographics_manifest.xlsx  diagnosis_manifest.xlsx  generate_docs.py  index.html  level_1.py  minimal_test_data.yaml  minimal_test_schema.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  test_conditional_requirements.py  test_conditional_requirements.yaml  test_data.yaml  test_vital_status.json  test_vital_status_deceased.json  wes_level1_template.csv
.github/workflows/: deploy-docs.yaml  generate-python-classes.yml  json-schema-synapse.yml  main.yaml  manual-python-generation.yml  python-classes-status-check.yml  test_pages_build.yaml
JSON_Schemas/: Exposure.flat.schema.json  FamilyHistory.flat.schema.json  FollowUp.flat.schema.json  HTAN.Diagnosis-v2.0.0-schema.json  MolecularTest.flat.schema.json  Therapy.flat.schema.json
JSON_Schemas/v0.1.12/: HTAN.BulkWESLevel1-v0.1.12-schema.json
Modules/: props.yaml
Modules/Templates/: MultiplexMicroscopyChannelMetadataImagingTemplate.yaml  MultiplexMicroscopyImagingTemplate.yaml
Modules/Worksheets/: NonDICOMRadiologyMR.yaml
archive/: HTAN2Model.yaml  README.md
config/: projects.yml
docs/: development.md  index.md  quickstart.md
examples/: README.md  single_manifest_generation.py
graphql/: level_1.graphql
htan_linkml/schema_classes/: clinical.py  participant.py
jsonld/: level_1.context.jsonld  level_1.jsonld
jsonschema/: level_1.schema.json
modules/Biospecimen/: Makefile  README.md  biospecimen_schema.json  pyproject.toml
modules/Biospecimen/domains/: acquisition_method_type_enum.yaml  analyte_type_enum.yaml  biospecimen.yaml  biospecimen_type_enum.yaml  cellular_architecture_enum.yaml  degree_of_dysplasia_enum.yaml  icd10_disease_enum.yaml  icd_10_disease_enum.yaml  icd_o_3_morphology_enum.yaml  icdo3_morphology_enum.yaml  preservation_medium_enum.yaml  preservation_method_enum.yaml  preservation_temperature_enum.yaml  shipping_condition_enum.yaml  site_of_resection_enum.yaml  slicing_method_enum.yaml  slide_charge_type_enum.yaml  specimen_laterality_enum.yaml  timepoint_enum.yaml  tissue_sample_type_enum.yaml  tumor_classification_enum.yaml
modules/Biospecimen/src/htan_biospecimen/: __init__.py
modules/Biospecimen/src/htan_biospecimen/datamodel/: __init__.py  biospecimen.py
modules/Biospecimen/src/htan_biospecimen/schema_classes/: __init__.py
modules/Biospecimen/tests/: test_biospecimen.py
modules/Clinical/: Makefile  README.md  clinical_core.yaml  clinical_schema.yaml  test_data.yaml
modules/Core/: README.md  core_schema.json
modules/Imaging/: Imaging.yaml
modules/Participant/: Makefile  README.md  participant.yaml  participant_schema.json
modules/Sample/: sample.yaml
owl/: level_1.owl.ttl
prefixmap/: level_1.yaml
protobuf/: level_1.proto
quickstart/: index.html
scripts/: bind_file_based_schemas.py  convert_uberon.py  flatten.js  generate_docs.py  generate_manifests.py  generate_test_data.py  linkml_to_flat_synapse_jsonschema.py  push_annotations_from_files.py  remove_defs_from_jsonschema.py  setup_synapse_organization.py  synapse_json_schema_bind.py  test_schema_version_logic.py
search/: search_index.json
shacl/: level_1.shacl.ttl
shex/: level_1.shex
sqlschema/: level_1.sql
test_output/: biospecimen_test_data_001.json  biospecimen_test_data_002.json  biospecimen_test_data_003.json  clinical_test_data_001.json  clinical_test_data_002.json  clinical_test_data_003.json  participant_test_data_001.json  participant_test_data_002.json  participant_test_data_003.json  scrna_seq_test_data_001.json  scrna_seq_test_data_002.json  scrna_seq_test_data_003.json  sequencing_test_data_001.json  sequencing_test_data_002.json  sequencing_test_data_003.json  wes_test_data_001.json  wes_test_data_002.json  wes_test_data_003.json
tests/: __init__.py  test_clinical.py  test_data.py  test_linkml_schema_conversion.py  test_none_types_analysis.py  test_participant.py
wes_level1_manifests/: BulkWESLevel1.xlsx  CoreFileAttributes.xlsx
(+338 files in other folders)
