[tool.poetry]
name = "htan_clinical"
version = "0.1.0"
description = "A LinkML data model for HTAN Clinical Domain"
authors = ["Adam Taylor <adam.taylor@sagebase.org>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "htan_clinical", from = "modules/Clinical/src" }
]
include = ["README.md", "modules/Clinical/src/htan_clinical/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
pyyaml = "^6.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
