[tool.poetry]
name = "htan-clinical"
version = "0.1.0"
description = "HTAN Clinical Data Model"
authors = ["HTAN Consortium <htan@humantumoratlas.org>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "htan_clinical", from = "modules/Clinical/src" }
]
include = ["README.md", "modules/Clinical/src/htan_clinical/schema", "project"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
jsonref = "^0.2"
linkml-runtime = "^1.1.24"
pyyaml = "^6.0.1"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
synapseclient = "^4.9.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.1.14"
pytest = "^7.4.0"
pytest-cov = "^6.2.1"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
